sf-kb-seed/force-app/main/default/objects/Knowledge__kav/fields/Abstract__c.field-meta.xml
<CustomField>
    <fullName>Abstract__c</fullName>
    <label>Abstract</label>
    <type>Html</type>
    <length>131072</length><visibleLines>25</visibleLines>
</CustomField>