sf-kb-seed/force-app/main/default/objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <type>Html</type>
    <length>131072</length><visibleLines>25</visibleLines>
</CustomField>