sf-kb-seed/force-app/main/default/objects/Knowledge__kav/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <type>Html</type>
    <length>131072</length><visibleLines>25</visibleLines>
</CustomField>