sf-kb-seed/force-app/main/default/objects/Knowledge__kav/fields/Procedure_Audience__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Audience__c</fullName>
    <label>Procedure Audience</label>
    <type>Text</type>
    <length>255</length>
</CustomField>