sf-kb-seed/force-app/main/default/objects/Knowledge__kav/fields/Procedure_Body__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Body__c</fullName>
    <label>Procedure Body</label>
    <type>Html</type>
    <length>131072</length><visibleLines>25</visibleLines>
</CustomField>