sf-kb-seed/force-app/main/default/objects/Knowledge__kav/recordTypes/News.recordType-meta.xml
<RecordType>
    <fullName>News</fullName>
    <active>true</active>
    <label>News</label>
</RecordType>